syntax = "proto3";

option go_package = "hsuliz/grpc_microservice_sample/cryptograph";

service CryptographService {
  rpc DecodeText(DecodeTextRequest) returns (DecodeTextResponse);
}

message DecodeTextRequest {
  string text = 1;
  uint32 runes = 2;
}

message DecodeTextResponse {
  string text = 1;
}
